src/Parsing/ParMacchiato.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParMacchiato.y
-----------------------------------------------------------------------------

state 11 contains 1 shift/reduce conflicts.
state 14 contains 1 shift/reduce conflicts.
state 137 contains 1 shift/reduce conflicts.

rule 42 is unused
rule 43 is unused
rule 44 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Integer -> L_integ                                 (1)
	String -> L_quoted                                 (2)
	UIdent -> L_UIdent                                 (3)
	Program -> ListFnDef                               (4)
	FnDef -> Type UIdent '(' ListArg ')' Block         (5)
	ListFnDef -> FnDef                                 (6)
	ListFnDef -> FnDef ListFnDef                       (7)
	Arg -> Type UIdent                                 (8)
	Arg -> Type '&' UIdent                             (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '}'                          (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt ListStmt                          (15)
	Stmt -> ';'                                        (16)
	Stmt -> Block                                      (17)
	Stmt -> FnDef                                      (18)
	Stmt -> Type ListItem ';'                          (19)
	Stmt -> UIdent '=' Expr ';'                        (20)
	Stmt -> UIdent ListDimAcc '=' Expr ';'             (21)
	Stmt -> 'return' Expr ';'                          (22)
	Stmt -> 'if' '(' Expr ')' Stmt                     (23)
	Stmt -> 'if' '(' Expr ')' Stmt 'else' Stmt         (24)
	Stmt -> 'while' '(' Expr ')' Stmt                  (25)
	Stmt -> Expr ';'                                   (26)
	Stmt -> 'print' ListPrintParam ';'                 (27)
	Item -> UIdent                                     (28)
	Item -> UIdent '=' Expr                            (29)
	ListItem -> Item                                   (30)
	ListItem -> Item ',' ListItem                      (31)
	PrintParam -> '<<' Expr                            (32)
	ListPrintParam -> PrintParam                       (33)
	ListPrintParam -> PrintParam ListPrintParam        (34)
	Type -> 'int'                                      (35)
	Type -> 'string'                                   (36)
	Type -> 'bool'                                     (37)
	Type -> Type '[]' ListDimBra                       (38)
	DimBra -> '[]'                                     (39)
	ListDimBra ->                                      (40)
	ListDimBra -> DimBra ListDimBra                    (41)
	ListType ->                                        (42)
	ListType -> Type                                   (43)
	ListType -> Type ',' ListType                      (44)
	Expr6 -> UIdent                                    (45)
	Expr6 -> 'new' Type ListDimAcc ListDimBra          (46)
	Expr6 -> UIdent ListDimAcc                         (47)
	Expr6 -> UIdent '::' KeyWord                       (48)
	Expr6 -> UIdent ListDimAcc '::' KeyWord            (49)
	Expr6 -> Integer                                   (50)
	Expr6 -> 'true'                                    (51)
	Expr6 -> 'false'                                   (52)
	Expr6 -> UIdent '(' ListExpr ')'                   (53)
	Expr6 -> String                                    (54)
	Expr6 -> '(' Expr ')'                              (55)
	DimAcc -> '[' Expr6 ']'                            (56)
	ListDimAcc -> DimAcc                               (57)
	ListDimAcc -> DimAcc ListDimAcc                    (58)
	KeyWord -> 'LENGTH'                                (59)
	KeyWord -> 'MAX_VAL'                               (60)
	Expr5 -> '-' Expr6                                 (61)
	Expr5 -> '!' Expr6                                 (62)
	Expr5 -> Expr6                                     (63)
	Expr4 -> Expr4 MulOp Expr5                         (64)
	Expr4 -> Expr5                                     (65)
	Expr3 -> Expr3 AddOp Expr4                         (66)
	Expr3 -> Expr4                                     (67)
	Expr2 -> Expr2 RelOp Expr3                         (68)
	Expr2 -> Expr3                                     (69)
	Expr1 -> Expr2 '&&' Expr1                          (70)
	Expr1 -> Expr2                                     (71)
	Expr -> Expr1 '||' Expr                            (72)
	Expr -> Expr1                                      (73)
	ListExpr ->                                        (74)
	ListExpr -> Expr                                   (75)
	ListExpr -> Expr ',' ListExpr                      (76)
	AddOp -> '+'                                       (77)
	AddOp -> '-'                                       (78)
	MulOp -> '*'                                       (79)
	MulOp -> '/'                                       (80)
	MulOp -> '%'                                       (81)
	RelOp -> '<'                                       (82)
	RelOp -> '<='                                      (83)
	RelOp -> '>'                                       (84)
	RelOp -> '>='                                      (85)
	RelOp -> '=='                                      (86)
	RelOp -> '!='                                      (87)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'/'            { PT _ (TS _ 12) }
	'::'           { PT _ (TS _ 13) }
	';'            { PT _ (TS _ 14) }
	'<'            { PT _ (TS _ 15) }
	'<<'           { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'LENGTH'       { PT _ (TS _ 22) }
	'MAX_VAL'      { PT _ (TS _ 23) }
	'['            { PT _ (TS _ 24) }
	'[]'           { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'else'         { PT _ (TS _ 28) }
	'false'        { PT _ (TS _ 29) }
	'if'           { PT _ (TS _ 30) }
	'int'          { PT _ (TS _ 31) }
	'new'          { PT _ (TS _ 32) }
	'print'        { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'string'       { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }
	L_UIdent       { PT _ (T_UIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Integer         rule  1
	String          rule  2
	UIdent          rule  3
	Program         rule  4
	FnDef           rule  5
	ListFnDef       rules 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15
	Stmt            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27
	Item            rules 28, 29
	ListItem        rules 30, 31
	PrintParam      rule  32
	ListPrintParam  rules 33, 34
	Type            rules 35, 36, 37, 38
	DimBra          rule  39
	ListDimBra      rules 40, 41
	ListType        rules 42, 43, 44
	Expr6           rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55
	DimAcc          rule  56
	ListDimAcc      rules 57, 58
	KeyWord         rules 59, 60
	Expr5           rules 61, 62, 63
	Expr4           rules 64, 65
	Expr3           rules 66, 67
	Expr2           rules 68, 69
	Expr1           rules 70, 71
	Expr            rules 72, 73
	ListExpr        rules 74, 75, 76
	AddOp           rules 77, 78
	MulOp           rules 79, 80, 81
	RelOp           rules 82, 83, 84, 85, 86, 87

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Program        goto state 3
	FnDef          goto state 4
	ListFnDef      goto state 5
	Type           goto state 6

State 1

	Integer -> . L_integ                                (rule 1)

	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<<'           reduce using rule 1
	'<='           reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	']'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListFnDef -> FnDef .                                (rule 6)
	ListFnDef -> FnDef . ListFnDef                      (rule 7)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	%eof           reduce using rule 6

	FnDef          goto state 4
	ListFnDef      goto state 13
	Type           goto state 6

State 5

	Program -> ListFnDef .                              (rule 4)

	%eof           reduce using rule 4


State 6

	FnDef -> Type . UIdent '(' ListArg ')' Block        (rule 5)
	Type -> Type . '[]' ListDimBra                      (rule 38)

	'[]'           shift, and enter state 11
	L_UIdent       shift, and enter state 12

	UIdent         goto state 10

State 7

	Type -> 'bool' .                                    (rule 37)

	'&'            reduce using rule 37
	'['            reduce using rule 37
	'[]'           reduce using rule 37
	L_UIdent       reduce using rule 37


State 8

	Type -> 'int' .                                     (rule 35)

	'&'            reduce using rule 35
	'['            reduce using rule 35
	'[]'           reduce using rule 35
	L_UIdent       reduce using rule 35


State 9

	Type -> 'string' .                                  (rule 36)

	'&'            reduce using rule 36
	'['            reduce using rule 36
	'[]'           reduce using rule 36
	L_UIdent       reduce using rule 36


State 10

	FnDef -> Type UIdent . '(' ListArg ')' Block        (rule 5)

	'('            shift, and enter state 17


State 11

	Type -> Type '[]' . ListDimBra                      (rule 38)

	'&'            reduce using rule 40
	'['            reduce using rule 40
	'[]'           shift, and enter state 16
			(reduce using rule 40)

	L_UIdent       reduce using rule 40

	DimBra         goto state 14
	ListDimBra     goto state 15

State 12

	UIdent -> L_UIdent .                                (rule 3)

	'!='           reduce using rule 3
	'%'            reduce using rule 3
	'&&'           reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	'::'           reduce using rule 3
	';'            reduce using rule 3
	'<'            reduce using rule 3
	'<<'           reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'=='           reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'['            reduce using rule 3
	']'            reduce using rule 3
	'||'           reduce using rule 3


State 13

	ListFnDef -> FnDef ListFnDef .                      (rule 7)

	%eof           reduce using rule 7


State 14

	ListDimBra -> DimBra . ListDimBra                   (rule 41)

	'!='           reduce using rule 40
	'%'            reduce using rule 40
	'&'            reduce using rule 40
	'&&'           reduce using rule 40
	')'            reduce using rule 40
	'*'            reduce using rule 40
	'+'            reduce using rule 40
	','            reduce using rule 40
	'-'            reduce using rule 40
	'/'            reduce using rule 40
	';'            reduce using rule 40
	'<'            reduce using rule 40
	'<<'           reduce using rule 40
	'<='           reduce using rule 40
	'=='           reduce using rule 40
	'>'            reduce using rule 40
	'>='           reduce using rule 40
	'['            reduce using rule 40
	'[]'           shift, and enter state 16
			(reduce using rule 40)

	']'            reduce using rule 40
	'||'           reduce using rule 40
	L_UIdent       reduce using rule 40

	DimBra         goto state 14
	ListDimBra     goto state 21

State 15

	Type -> Type '[]' ListDimBra .                      (rule 38)

	'&'            reduce using rule 38
	'['            reduce using rule 38
	'[]'           reduce using rule 38
	L_UIdent       reduce using rule 38


State 16

	DimBra -> '[]' .                                    (rule 39)

	'!='           reduce using rule 39
	'%'            reduce using rule 39
	'&'            reduce using rule 39
	'&&'           reduce using rule 39
	')'            reduce using rule 39
	'*'            reduce using rule 39
	'+'            reduce using rule 39
	','            reduce using rule 39
	'-'            reduce using rule 39
	'/'            reduce using rule 39
	';'            reduce using rule 39
	'<'            reduce using rule 39
	'<<'           reduce using rule 39
	'<='           reduce using rule 39
	'=='           reduce using rule 39
	'>'            reduce using rule 39
	'>='           reduce using rule 39
	'['            reduce using rule 39
	'[]'           reduce using rule 39
	']'            reduce using rule 39
	'||'           reduce using rule 39
	L_UIdent       reduce using rule 39


State 17

	FnDef -> Type UIdent '(' . ListArg ')' Block        (rule 5)

	')'            reduce using rule 10
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9

	Arg            goto state 18
	ListArg        goto state 19
	Type           goto state 20

State 18

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 25


State 19

	FnDef -> Type UIdent '(' ListArg . ')' Block        (rule 5)

	')'            shift, and enter state 24


State 20

	Arg -> Type . UIdent                                (rule 8)
	Arg -> Type . '&' UIdent                            (rule 9)
	Type -> Type . '[]' ListDimBra                      (rule 38)

	'&'            shift, and enter state 23
	'[]'           shift, and enter state 11
	L_UIdent       shift, and enter state 12

	UIdent         goto state 22

State 21

	ListDimBra -> DimBra ListDimBra .                   (rule 41)

	'!='           reduce using rule 41
	'%'            reduce using rule 41
	'&'            reduce using rule 41
	'&&'           reduce using rule 41
	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	';'            reduce using rule 41
	'<'            reduce using rule 41
	'<<'           reduce using rule 41
	'<='           reduce using rule 41
	'=='           reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'['            reduce using rule 41
	'[]'           reduce using rule 41
	']'            reduce using rule 41
	'||'           reduce using rule 41
	L_UIdent       reduce using rule 41


State 22

	Arg -> Type UIdent .                                (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 23

	Arg -> Type '&' . UIdent                            (rule 9)

	L_UIdent       shift, and enter state 12

	UIdent         goto state 29

State 24
